DH: fix style menu on iphone

--- a/wp-content/themes/denholm/scss/base/_helpers.scss
+++ b/wp-content/themes/denholm/scss/base/_helpers.scss
@@ -281,4 +281,6 @@
 
 .overflow-hidden {
   overflow: hidden;
+  position: absolute;
+  height: 100%;
 }
