--- a/wp-content/themes/denholm/scss/components/_page-transition.scss
+++ b/wp-content/themes/denholm/scss/components/_page-transition.scss
@@ -434,7 +434,7 @@
       align-items: center;
       justify-content: center;
       flex-wrap: wrap;
-      z-index: 9;
+      z-index: 99;
       padding-top: 30px;
       overflow: auto;
       opacity: 0;
@@ -478,6 +478,7 @@
       padding: 4px 30px;
       text-transform: uppercase;
       background: rgba(#edd6d6, .7);
+      z-index: 100;
 
       @include susy-media(tablet) {
         right: 24px;
